# PolitifactScraper

./: .gitignore  data.json  pyproject.toml
politfactscraper/: post.py  scraper.py  snippet.html
tests/: test_politfactscraper.py
