[tool.poetry]
name = "PolitfactScraper"
version = "0.1.0"
description = ""
authors = ["Eric Cao <eric7252000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.2"
requests = "^2.24.0"
lxml = "^4.5.2"
mypy = "^0.782"
bandit = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
